fix icon spacing

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -47,3 +47,22 @@
   border-right: 0px;
   background-color: inherit;
 }
+
+.tweet-container footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.tweet-container footer div {
+  display: flex;
+  flex-direction: row;
+}
+
+.tweet-container footer div i.fa-solid {
+  display: flex;
+  flex-direction: row;
+  padding-left: 5px;
+  padding-right: 5px;
+}
